@@ -3196,14 +3196,15 @@ namespace OpenBabel
         while (atom->BOSum() > static_cast<unsigned int>(etab.GetMaxBonds(atom->GetAtomicNum()))
                || atom->SmallestBondAngle() < 45.0)
           {
-            maxbond = atom->BeginBond(l);
+            bond = atom->BeginBond(l);
+            maxbond = bond;
             // Fix from Liu Zhiguo 2008-01-26
             // loop past any bonds
             // which existed before ConnectTheDots was called
             // (e.g., from PDB resdata.txt)
             valCount = 0;
             while (valCount < bondCount[atom->GetIdx() - 1]) {
-              maxbond = atom->NextBond(l);
+              bond = atom->NextBond(l);
               // timvdm: 2008-03-05
               // NextBond only returns NULL if the iterator l == _bonds.end().
               // This was casuing problems as follows:
@@ -3213,16 +3214,19 @@ namespace OpenBabel
               // NextBond = 0x????????
               // NextBond = NULL	<-- this NULL was not detected
               // NextBond = 0x????????
-              if (!maxbond) // so we add an additional check
+              if (!bond) // so we add an additional check
                 break;
+              maxbond = bond;
               valCount++;
             }
-            if (!maxbond) // no new bonds added for this atom, just skip it
+            if (!bond) // no new bonds added for this atom, just skip it
               break;
             
             maxlength = maxbond->GetLength();
-            for (bond = atom->BeginBond(l);bond;bond = atom->NextBond(l))
+            for (bond = atom->NextBond(l);bond;bond = atom->NextBond(l))
               {
+                if (!bond)
+                  break;
                 if (bond->GetLength() > maxlength)
                   {
                     maxbond = bond;
